--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ INCLUDE_DIRECTORIES("${THZC_INSTALL_INCLUDE_SUBDIR}/THC")
 SET(src Storage.c init.c Tensor.c TensorMath.c TensorOperator.c torch/utils.c)
 SET(luasrc init.lua Tensor.lua FFI.lua test/test.lua)
 
-ADD_TORCH_WRAP(cudatensormathwrap TensorMath.lua)
+ADD_TORCH_WRAP(zcudatensormathwrap TensorMath.lua)
 
 ADD_TORCH_PACKAGE(zcutorch "${src}" "${luasrc}")
-TARGET_LINK_LIBRARIES(zcutorch luaT THC)
+TARGET_LINK_LIBRARIES(zcutorch luaT THZ THC THZC)
 
 IF(LUALIB)
   TARGET_LINK_LIBRARIES(zcutorch ${LUALIB})
