--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ ADD_SUBDIRECTORY(lib)
 INCLUDE_DIRECTORIES(BEFORE "${CMAKE_CURRENT_BINARY_DIR}/lib/THC")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/lib/THC")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/torch")
-INCLUDE_DIRECTORIES("${THZC_INSTALL_INCLUDE_SUBDIR}/THC")
+INCLUDE_DIRECTORIES("/home/philipp/torch/install/include/THC")
+INCLUDE_DIRECTORIES("${THC_INSTALL_INCLUDE_SUBDIR}/THC")
 
 SET(src Storage.c init.c Tensor.c TensorMath.c TensorOperator.c torch/utils.c)
 SET(luasrc init.lua Tensor.lua FFI.lua test/test.lua THZCi.lua)
