--- a/lib/THC/CMakeLists.txt
+++ b/lib/THC/CMakeLists.txt
@@ -55,6 +55,7 @@ IF(NOT THZC_INSTALL_BIN_SUBDIR
     OR NOT THZC_INSTALL_CMAKE_SUBDIR)
 
   INCLUDE_DIRECTORIES(${TH_INCLUDE_PATH} ${TH_INCLUDE_PATH}/TH)
+  INCLUDE_DIRECTORIES(${TH_INCLUDE_PATH} ${TH_INCLUDE_PATH}/THC)
   LINK_DIRECTORIES(${TH_LIB_PATH})
 
   SET(THZC_INSTALL_BIN_SUBDIR "bin" CACHE PATH "THZC install binary subdirectory")
@@ -67,7 +68,7 @@ ELSE()
   SET(THZC_INSTALL_INCLUDE_SUBDIR ${Torch_INSTALL_INCLUDE_SUBDIR})
   SET(THZC_INSTALL_CMAKE_SUBDIR ${Torch_INSTALL_CMAKE_SUBDIR})
 ENDIF()
-
+INCLUDE_DIRECTORIES("/home/philipp/torch/install/include/THC")
 INCLUDE_DIRECTORIES("${THZC_INSTALL_INCLUDE_SUBDIR}/THC")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
 CONFIGURE_FILE(THZCGeneral.h.in "${CMAKE_CURRENT_BINARY_DIR}/THZCGeneral.h")
@@ -102,6 +103,7 @@ SET(src-cuda
 
 CUDA_ADD_LIBRARY(THZC SHARED ${src} ${src-cuda})
 CUDA_ADD_CUBLAS_TO_TARGET(THZC)
+CUDA_ADD_CUFFT_TO_TARGET(THZC)
 TARGET_LINK_LIBRARIES(THZC TH ${CUDA_curand_LIBRARY})
 
 IF(USE_MAGMA)
